--- a/style/style.css
+++ b/style/style.css
@@ -89,41 +89,11 @@ svg{
   height: 100vh;     
 }
 
-
-
-.btn01{
-  width: 15%;
-  height: 45px;
-  max-width: 350px;
-  margin-top: 20px;
-  border-radius: 25px;
-  background-color: rgba(255, 255, 255, 0.4);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(1px);
-  -webkit-backdrop-filter: blur(3px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  transition: background-color 0.4s ease-in;
-}
-.btn01:hover{
-  background-color: rgba(255, 255, 255, 0.6);
-}
-.btn01>a{
-  display: block;
-  width: 100%;
-  height: 100%;
-  justify-content: center; /**/
-  align-items: center;
-  text-decoration: none;
-  margin-left: 4px; /**/
-  color: #000;
-  font-size: 16px;
-}
-
-.p{
+.t{
   margin-top: 1em;
   z-index: 1;
 }
-.p>h1{
+.t>h1{
   font-size: medium;
   text-align: center;
   color: #fff;
@@ -162,3 +132,16 @@ svg{
   margin-left: 4px; /**/
   color: #000;
   font-size: 16px;
+}
+/* style.css */
+footer {
+   background-color: #333; /* Ganti dengan warna latar belakang yang Anda inginkan */
+   color: #fff; /* Ganti dengan warna teks yang Anda inginkan */
+   text-align: center;
+   padding: 10px 0; /* Sesuaikan padding sesuai kebutuhan Anda */
+}
+
+footer p {
+   margin: 0; /* Hapus margin default yang mungkin ada pada elemen 'p' dalam footer */
+   font-size: 14px; /* Sesuaikan ukuran teks sesuai kebutuhan Anda */
+}
